<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:scrollbars="none"
    tools:context=".view.MainActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp">

        <ImageView
            android:id="@+id/iv_header_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_logo_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ly_linear_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_header_logo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/viga_regular"
                android:gravity="center"
                android:text="Kategori tempat wisata di Semarang"
                android:textColor="?attr/colorTextHint"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/viga_regular"
                android:text="@string/title_history"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_nature"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/viga_regular"
                android:text="@string/title_nature"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_education"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/viga_regular"
                android:text="@string/title_education"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_linear_menu">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/viga_regular"
                android:gravity="center"
                android:text="Untuk mengetahui informasi selengkapnya bisa kunjungi web di bawah ini"
                android:textColor="?attr/colorTextHint"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_web"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/viga_regular"
                android:text="@string/title_web_dinas"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp"
                android:textStyle="normal" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>